[package]
    name    = "wasi-experimental-toolkit"
    version = "0.1.0"
    edition = "2021"
    authors = [ "Radu Matei <radu.matei@fermyon.com>" ]

[dependencies]

[workspace]
    members = [ "crates/cache-redis-wasmtime", "crates/http-wasmtime" ]


[dev-dependencies]
    anyhow                      = "1.0"
    cache-wasi-redis-wasmtime   = { path = "crates/cache-redis-wasmtime" }
    env_logger                  = "0.9"
    log                         = { version = "0.4", default-features = false }
    wasi-outbound-http-wasmtime = { path = "crates/http-wasmtime" }
    tokio                       = { version = "1.4.0", features = [ "full" ] }
    wasmtime                    = "0.32"
    wasmtime-wasi               = "0.32"
    wasi-common                 = "0.32"
    wasi-cap-std-sync           = "0.32"
    wit-bindgen-wasmtime        = { git = "https://github.com/bytecodealliance/wit-bindgen", rev = "dab589f579b980c81b39c8348400b88a8c4d175a" }
