[package]
    name    = "wasi-experimental-toolkit"
    version = "0.1.0"
    edition = "2021"
    authors = [ "Radu Matei <radu.matei@fermyon.com>" ]

[dependencies]

[workspace]
    members = [ "crates/cache-redis-wasmtime", "crates/http-wasmtime", "crates/log-wasmtime", "crates/mongo-wasmtime"]


[dev-dependencies]
    anyhow                      = "1.0"
    cache-wasi-redis-wasmtime   = { path = "crates/cache-redis-wasmtime" }
    env_logger                  = "0.9"
    log                         = { version = "0.4", default-features = false }
mongodb                         = { version = "2.1.0", default-features = false, features = [ "sync" ] }
    wasi-outbound-http-wasmtime = { path = "crates/http-wasmtime" }
    log-wasmtime                = { path = "crates/log-wasmtime" }
    mongo-wasmtime                = { path = "crates/mongo-wasmtime"}
    tokio                       = { version = "1.4.0", features = [ "full" ] }
    wasmtime                    = "0.33"
    wasmtime-wasi               = "0.33"
    wasi-common                 = "0.33"
    wasi-cap-std-sync           = "0.33"
    wit-bindgen-wasmtime        = { git = "https://github.com/bytecodealliance/wit-bindgen", rev = "2e654dc82b7f9331719ba617a36ed5967b2aecb0" }
