[package]
    name    = "wasi-experimental-toolkit"
    version = "0.1.0"
    edition = "2021"
    authors = [ "Radu Matei <radu.matei@fermyon.com>" ]

[dependencies]

[workspace]
    members = [ "crates/cache-redis-wasmtime", "crates/http-wasmtime", "crates/log-wasmtime", "crates/nn-tract-wasmtime", "crates/tikv-rust-client-wasmtime"]


[dev-dependencies]
    anyhow                      = "1.0"
    cache-wasi-redis-wasmtime   = { path = "crates/cache-redis-wasmtime" }
    env_logger                  = "0.9"
    log                         = { version = "0.4", default-features = false }
    wasi-outbound-http-wasmtime = { path = "crates/http-wasmtime" }
    log-wasmtime                = { path = "crates/log-wasmtime" }
    tokio                       = { version = "1.4.0", features = [ "full" ] }
    wasmtime                    = "0.35"
    wasmtime-wasi               = "0.35"
    wasi-common                 = "0.35"
    wasi-cap-std-sync           = "0.35"
    wit-bindgen-wasmtime        = { git = "https://github.com/bytecodealliance/wit-bindgen", rev = "458a664bce7b2064d61fbd594efb2673d3130316" }
    wasi-nn-tract-wasmtime      = { path = "crates/nn-tract-wasmtime" }
    tikv-rust-client-wasmtime   = { path = "crates/tikv-rust-client-wasmtime"}
