[package]
    name    = "wasi-cache-fs"
    version = "0.1.0"
    edition = "2021"
    authors = [ "Radu Matei <radu.matei@fermyon.com>" ]

[lib]
    crate-type = [ "cdylib" ]

[dependencies]
    anyhow           = "1.0"
    wit-bindgen-rust = { git = "https://github.com/bytecodealliance/wit-bindgen", rev = "f5eed0fb9f1087a2f8889194d0debeeafa789c88" }

[workspace]

[build-dependencies]
    wasi-cache-defs = { path = "../wasi-cache-defs" }
