[package]
    name    = "cache-wasi-redis-wasmtime"
    version = "0.1.0"
    edition = "2021"
    authors = [ "Radu Matei <radu.matei@fermyon.com>" ]

[lib]
    doctest = false

[dependencies]
    anyhow               = "1.0"
    env_logger           = "0.9"
    log                  = { version = "0.4", default-features = false }
    redis                = { version = "0.21", features = [ "tokio-comp" ] }
    tokio                = { version = "1.14", features = [ "full" ] }
    wit-bindgen-wasmtime = { git = "https://github.com/bytecodealliance/wit-bindgen", rev = "f5eed0fb9f1087a2f8889194d0debeeafa789c88" }
