[package]
name = "ce"
version = "0.1.0"
edition = "2021"
authors = [ "Mossaka <jiazho@microsoft.com>" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
    crate-type = [ "cdylib" ]

[dependencies]
    anyhow           = "1.0"
    wit-bindgen-rust = { git = "https://github.com/bytecodealliance/wit-bindgen", rev = "2e654dc82b7f9331719ba617a36ed5967b2aecb0" }

[workspace]