[package]
name = "ce"
version = "0.1.0"
edition = "2021"
authors = [ "Mossaka <jiazho@microsoft.com>" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
    crate-type = [ "cdylib" ]

[dependencies]
    anyhow           = "1.0"
    wit-bindgen-rust = { git = "https://github.com/bytecodealliance/wit-bindgen", rev = "f5eed0fb9f1087a2f8889194d0debeeafa789c88" }

[workspace]

[build-dependencies]
    wasi-ce-defs = { path = "../wasi-ce-defs" }
