[package]
name = "ce"
version = "0.1.0"
edition = "2021"
authors = [ "Mossaka <jiazho@microsoft.com>" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
    crate-type = [ "cdylib" ]

[dependencies]
    anyhow           = "1.0"
    wit-bindgen-rust = { git = "https://github.com/bytecodealliance/wit-bindgen", rev = "458a664bce7b2064d61fbd594efb2673d3130316" }

[workspace]