[package]
    name = "envvars-passthru"
    version = "0.1.0"
    edition = "2021"
    authors = [ "Scott Lyons <scottalyons@gmail.com>" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
    doctest = false

[dependencies]
    anyhow          = "1.0"
    env_logger      = "0.9"
    wit-bindgen-wasmtime = { git = "https://github.com/bytecodealliance/wit-bindgen", rev = "2e654dc82b7f9331719ba617a36ed5967b2aecb0" }