[package]
    name    = "wasi-outbound-http-wasmtime"
    version = "0.1.0"
    edition = "2021"
    authors = [ "Radu Matei <radu.matei@fermyon.com>" ]

[lib]
    doctest = false

[features]
  default = [ "native-tls" ]
  native-tls = [ "openssl", "reqwest/native-tls" ]
  rustls-tls = [ "reqwest/rustls-tls" ]

[dependencies]
    anyhow               = "1.0"
    bytes                = "1"
    cfg-if               = "1.0.0"
    futures              = "0.3"
    http                 = "0.2"
    openssl              = { version = "0.10.38", optional = true }
    reqwest              = { version = "0.11", default-features = false, features = [ "json", "blocking" ] }
    tracing              = "0.1.32"
    tokio                = { version = "1.4.0", features = [ "full" ] }
    url                  = "2.2.1"
    uuid                 = { version = "0.8.2", features = [ "v4" ] }
    wit-bindgen-wasmtime = { git = "https://github.com/bytecodealliance/wit-bindgen", rev = "2e654dc82b7f9331719ba617a36ed5967b2aecb0" }
