[package]
    name    = "log-wasmtime"
    version = "0.1.0"
    edition = "2021"
    authors = [ "Nitish Malhotra <nitishm@microsoft.com>" ]

[lib]
    doctest = false

[dependencies]
    anyhow               = "1.0"
    env_logger = "0.9.0"
    log = "0.4.0"
    wit-bindgen-wasmtime = { git = "https://github.com/bytecodealliance/wit-bindgen", rev = "458a664bce7b2064d61fbd594efb2673d3130316" }
