[package]
    name    = "mongo-wasmtime"
    version = "0.1.0"
    edition = "2021"
    authors = [ "Nitish Malhotra <nitishm@microsoft.com>" ]

[lib]
    doctest = false

[dependencies]
    anyhow               = "1.0"
    wit-bindgen-wasmtime = { git = "https://github.com/bytecodealliance/wit-bindgen", rev = "2e654dc82b7f9331719ba617a36ed5967b2aecb0" }
mongodb                         = { version = "2.1.0", default-features = false, features = [ "sync" ] }