[package]
    name    = "wasi-nn-tract-wasmtime"
    version = "0.1.0"
    edition = "2021"

[lib]
    doctest = false

[dependencies]
    anyhow               = "1.0"
    byteorder            = "1.4"
    log                  = "0.4"
    ndarray              = "0.15"
    thiserror            = "1.0"
    tract-data           = "0.15"
    tract-linalg         = "0.15"
    tract-onnx           = "0.15"
    wit-bindgen-wasmtime = { git = "https://github.com/bytecodealliance/wit-bindgen", rev = "f5eed0fb9f1087a2f8889194d0debeeafa789c88" }

[build-dependencies]
    wasi-nn-defs = { path = "../wasi-nn-defs" }
