[package]
    name    = "wasi-nn-tract-wasmtime"
    version = "0.1.0"
    edition = "2021"

[lib]
    doctest = false

[dependencies]
    anyhow               = "1.0"
    byteorder            = "1.4"
    log                  = "0.4"
    ndarray              = "0.15"
    thiserror            = "1.0"
    tract-data           = "0.15"
    tract-linalg         = "0.15"
    tract-onnx           = "0.15"
    wit-bindgen-wasmtime = { git = "https://github.com/bytecodealliance/wit-bindgen", rev = "458a664bce7b2064d61fbd594efb2673d3130316" }
