[package]
    name    = "tikv-rust-client-wasmtime"
    version = "0.1.0"
    edition = "2021"
    authors = [ "Mossaka <jiazho@microsoft.com>" ]

[lib]
    doctest = false

[dependencies]
    anyhow               = "1.0"
    env_logger           = "0.9"
    log                  = { version = "0.4", default-features = false }
    wit-bindgen-wasmtime = { git = "https://github.com/bytecodealliance/wit-bindgen", rev = "f5eed0fb9f1087a2f8889194d0debeeafa789c88" }
    tikv-client = { git="https://github.com/tikv/client-rust.git", branch="master" }
    tokio = { version="1.6.1", features=["full"] }

[build-dependencies]
    wasi-cache-defs = { path = "../wasi-cache-defs" }
