[package]
name = "rust-log"
version = "0.1.0"
edition = "2021"
authors = [ "Nitish Malhotra <nitishm@microsoft.com>" ]


[lib]
    crate-type = [ "cdylib" ]

[dependencies]
    wit-bindgen-rust = { git = "https://github.com/bytecodealliance/wit-bindgen", rev = "f5eed0fb9f1087a2f8889194d0debeeafa789c88" }

[workspace]
