[package]
name = "rust-log"
version = "0.1.0"
edition = "2021"
authors = [ "Nitish Malhotra <nitishm@microsoft.com>" ]


[lib]
    crate-type = [ "cdylib" ]

[dependencies]
    wit-bindgen-rust = { git = "https://github.com/bytecodealliance/wit-bindgen", rev = "458a664bce7b2064d61fbd594efb2673d3130316" }

[workspace]
